--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.1",
+    "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
     "concurrently": "^6.5.0",
     "cross-env": "^7.0.3",
@@ -28,7 +29,11 @@
     "tailwindcss": "^3.0.7"
   },
   "dependencies": {
+    "@themesberg/flowbite": "^1.2.0",
+    "firebase": "^9.6.1",
     "page": "^1.11.6",
+    "rxfire": "^6.0.3",
+    "rxjs": "^7.4.0",
     "sirv-cli": "^1.0.14"
   }
 }
